Parallel execution not working! Clean-up of old MATLAB files

--- a/examples/notebooks/RSF_spring-block.ipynb
+++ b/examples/notebooks/RSF_spring-block.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "# Global simulation parameters\n",
     "set_dict[\"MESHDIM\"] = 0        # Simulation dimensionality (spring-block)\n",
     "set_dict[\"TMAX\"] = 300         # Maximum simulation time [s]\n",
-    "set_dict[\"NTOUT\"] = 100        # Save output every N steps\n",
+    "set_dict[\"NTOUT_OT\"] = 1       # Save output every N steps\n",
     "set_dict[\"V_PL\"] = 1e-5        # Load-point velocity [m/s]\n",
     "set_dict[\"MU\"] = 2e9           # Shear modulus [Pa]\n",
     "set_dict[\"SIGMA\"] = 5e6        # Effective normal stress [Pa]\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,23 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stress field not set, converting V0 into tau...\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,54 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Number of processors =            1\n",
-      " Start reading input...\n",
-      "    Mesh input complete\n",
-      "   Flags input complete\n",
-      " Input complete\n",
-      " Initializing mesh...\n",
-      " Spring-block System\n",
-      " Impedance =       0.333E+06                                                                                                                                                                                                                                    \n",
-      " Intializing kernel: ...\n",
-      " Single degree-of-freedom spring-block system\n",
-      " Kernel intialized\n",
-      " Values at selected point of the fault:\n",
-      " K/Kc =    2.5132741228718349     \n",
-      " K/Kb =   0.83775804095727835     \n",
-      "\n",
-      "     it,  dt (secs), time (yrs), v_max (m/s), sigma_max (MPa)\n",
-      " Initialising RK45 solver\n",
-      " Finished initialising RK45 solver\n",
-      " Initialization completed\n",
-      "      0   0.000E+00   0.000E+00   0.101E-04   0.500E+01\n",
-      "    100   0.424E+00   0.145E-05   0.835E-05   0.500E+01\n",
-      "    200   0.139E+00   0.258E-05   0.200E-04   0.500E+01\n",
-      "    300   0.107E-01   0.334E-05   0.318E-03   0.500E+01\n",
-      "    400   0.177E-04   0.396E-05   0.228E+00   0.500E+01\n",
-      "    500   0.325E-04   0.467E-05   0.159E+00   0.500E+01\n",
-      "    600   0.259E-03   0.539E-05   0.393E-02   0.500E+01\n",
-      "    700   0.519E-02   0.611E-05   0.290E-04   0.500E+01\n",
-      "    800   0.164E+00   0.684E-05   0.197E-06   0.500E+01\n",
-      "    900   0.208E+01   0.783E-05   0.617E-07   0.500E+01\n",
-      "   1000   0.867E+00   0.888E-05   0.178E-05   0.500E+01\n",
-      " RK45 error [8]: invalid input parameters\n",
-      "   1091   0.111E+01   0.951E-05   0.405E-06   0.500E+01\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +158,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -245,6 +200,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>step</th>\n",
        "      <th>t</th>\n",
        "      <th>potcy</th>\n",
        "      <th>pot_rate</th>\n",
@@ -254,11 +210,13 @@
        "      <th>dtau_dt</th>\n",
        "      <th>slip</th>\n",
        "      <th>sigma</th>\n",
+       "      <th>fault_label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.00001</td>\n",
@@ -268,9 +226,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0.000068</td>\n",
        "      <td>6.059607e-10</td>\n",
        "      <td>0.00001</td>\n",
@@ -280,9 +240,11 @@
        "      <td>0.0</td>\n",
        "      <td>6.059607e-10</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0.000130</td>\n",
        "      <td>1.230405e-09</td>\n",
        "      <td>0.00001</td>\n",
@@ -292,9 +254,11 @@
        "      <td>0.0</td>\n",
        "      <td>1.230405e-09</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0.000439</td>\n",
        "      <td>4.352634e-09</td>\n",
        "      <td>0.00001</td>\n",
@@ -304,9 +268,11 @@
        "      <td>0.0</td>\n",
        "      <td>4.352634e-09</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0.001985</td>\n",
        "      <td>1.996394e-08</td>\n",
        "      <td>0.00001</td>\n",
@@ -316,9 +282,11 @@
        "      <td>0.0</td>\n",
        "      <td>1.996394e-08</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>0.009713</td>\n",
        "      <td>9.802442e-08</td>\n",
        "      <td>0.00001</td>\n",
@@ -328,9 +296,11 @@
        "      <td>0.0</td>\n",
        "      <td>9.802442e-08</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>0.048355</td>\n",
        "      <td>4.884259e-07</td>\n",
        "      <td>0.00001</td>\n",
@@ -340,9 +310,11 @@
        "      <td>0.0</td>\n",
        "      <td>4.884259e-07</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>0.241563</td>\n",
        "      <td>2.442855e-06</td>\n",
        "      <td>0.00001</td>\n",
@@ -352,9 +324,11 @@
        "      <td>0.0</td>\n",
        "      <td>2.442855e-06</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>0.809331</td>\n",
        "      <td>8.207245e-06</td>\n",
        "      <td>0.00001</td>\n",
@@ -364,9 +338,11 @@
        "      <td>0.0</td>\n",
        "      <td>8.207245e-06</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>1.372635</td>\n",
        "      <td>1.394957e-05</td>\n",
        "      <td>0.00001</td>\n",
@@ -376,38 +352,39 @@
        "      <td>0.0</td>\n",
        "      <td>1.394957e-05</td>\n",
        "      <td>5000000.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          t         potcy  pot_rate        v     theta        tau  dtau_dt   \n",
-       "0  0.000000  0.000000e+00   0.00001  0.00001  1.000000  3000498.0      0.0  \\\n",
-       "1  0.000068  6.059607e-10   0.00001  0.00001  1.000007  3000498.0      0.0   \n",
-       "2  0.000130  1.230405e-09   0.00001  0.00001  1.000007  3000498.0      0.0   \n",
-       "3  0.000439  4.352634e-09   0.00001  0.00001  1.000004  3000498.0      0.0   \n",
-       "4  0.001985  1.996394e-08   0.00001  0.00001  0.999988  3000497.0      0.0   \n",
-       "5  0.009713  9.802442e-08   0.00001  0.00001  0.999911  3000496.0      0.0   \n",
-       "6  0.048355  4.884259e-07   0.00001  0.00001  0.999524  3000488.0      0.0   \n",
-       "7  0.241563  2.442855e-06   0.00001  0.00001  0.997572  3000443.0      0.0   \n",
-       "8  0.809331  8.207245e-06   0.00001  0.00001  0.991942  3000270.0      0.0   \n",
-       "9  1.372635  1.394957e-05   0.00001  0.00001  0.987088  3000051.0      0.0   \n",
+       "   step         t         potcy  pot_rate        v     theta        tau   \n",
+       "0     0  0.000000  0.000000e+00   0.00001  0.00001  1.000000  3000498.0  \\\n",
+       "1     1  0.000068  6.059607e-10   0.00001  0.00001  1.000007  3000498.0   \n",
+       "2     2  0.000130  1.230405e-09   0.00001  0.00001  1.000007  3000498.0   \n",
+       "3     3  0.000439  4.352634e-09   0.00001  0.00001  1.000004  3000498.0   \n",
+       "4     4  0.001985  1.996394e-08   0.00001  0.00001  0.999988  3000497.0   \n",
+       "5     5  0.009713  9.802442e-08   0.00001  0.00001  0.999911  3000496.0   \n",
+       "6     6  0.048355  4.884259e-07   0.00001  0.00001  0.999524  3000488.0   \n",
+       "7     7  0.241563  2.442855e-06   0.00001  0.00001  0.997572  3000443.0   \n",
+       "8     8  0.809331  8.207245e-06   0.00001  0.00001  0.991942  3000270.0   \n",
+       "9     9  1.372635  1.394957e-05   0.00001  0.00001  0.987088  3000051.0   \n",
        "\n",
-       "           slip      sigma  \n",
-       "0  0.000000e+00  5000000.0  \n",
-       "1  6.059607e-10  5000000.0  \n",
-       "2  1.230405e-09  5000000.0  \n",
-       "3  4.352634e-09  5000000.0  \n",
-       "4  1.996394e-08  5000000.0  \n",
-       "5  9.802442e-08  5000000.0  \n",
-       "6  4.884259e-07  5000000.0  \n",
-       "7  2.442855e-06  5000000.0  \n",
-       "8  8.207245e-06  5000000.0  \n",
-       "9  1.394957e-05  5000000.0  "
+       "   dtau_dt          slip      sigma  fault_label  \n",
+       "0      0.0  0.000000e+00  5000000.0            1  \n",
+       "1      0.0  6.059607e-10  5000000.0            1  \n",
+       "2      0.0  1.230405e-09  5000000.0            1  \n",
+       "3      0.0  4.352634e-09  5000000.0            1  \n",
+       "4      0.0  1.996394e-08  5000000.0            1  \n",
+       "5      0.0  9.802442e-08  5000000.0            1  \n",
+       "6      0.0  4.884259e-07  5000000.0            1  \n",
+       "7      0.0  2.442855e-06  5000000.0            1  \n",
+       "8      0.0  8.207245e-06  5000000.0            1  \n",
+       "9      0.0  1.394957e-05  5000000.0            1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -433,7 +410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "298f2fa72aca4bd4ae42f5910d678a2d",
+       "model_id": "6d086eace97a47a186949f501d46ba61",
        "version_major": 2,
        "version_minor": 0
       },
