Fixed typo in single asperity notebook (#81, #82) Adding reference to previous fixed bug that was not tagged (#78)

--- a/examples/notebooks/single_asperity.ipynb
+++ b/examples/notebooks/single_asperity.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,6 +28,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,7 +71,7 @@
     "# Predefine parameters\n",
     "t_yr = 3600 * 24 * 365.0    # seconds per year\n",
     "Lasp = 7                    # Length of asperity / nucleation length\n",
-    "L = 5                       # Length of fault / nucleation length\n",
+    "L = 5                       # Length of fault / asperity length\n",
     "ab_ratio = 0.8              # a/b of asperity\n",
     "cab_ratio = 1 - ab_ratio\n",
     "resolution = 7              # Mesh resolution / process zone width\n",
@@ -136,6 +138,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -448,6 +452,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -475,6 +480,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -518,6 +524,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -563,6 +570,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
