Expanded documentation, revised README Moved TAU setting from friction-law dictionaries to general settings dictionary Updated tests to accommodate the new location of TAU

--- a/examples/notebooks/CNS_spring-block.ipynb
+++ b/examples/notebooks/CNS_spring-block.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,10 +23,11 @@
     "import numpy as np\n",
     "\n",
     "# Import QDYN wrapper\n",
-    "from qdyn.pyqdyn import qdyn"
+    "from qdyn import qdyn"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -87,6 +90,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,6 +120,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,6 +176,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -396,6 +403,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -412,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09e4167e1c904a77a011bf35de4b9455",
+       "model_id": "b6a57bb114634a259b0aa6585415f210",
        "version_major": 2,
        "version_minor": 0
       },
@@ -460,6 +468,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -476,7 +485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58a1f2f2ed234262944e7fdac3bb93c4",
+       "model_id": "ff33a14bfaf943ee8ad1cf37536f88ba",
        "version_major": 2,
        "version_minor": 0
       },
