--- a/examples/notebooks/restart_simulation.ipynb
+++ b/examples/notebooks/restart_simulation.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,7 +38,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,6 +98,7 @@
     "set_dict[\"SET_DICT_RSF\"][\"B\"] = 1e-2      # Evolution effect\n",
     "set_dict[\"SET_DICT_RSF\"][\"DC\"] = 4e-4     # Characteristic slip distance\n",
     "set_dict[\"SET_DICT_RSF\"][\"V_SS\"] = set_dict[\"V_PL\"]    # Reference velocity [m/s]\n",
+    "set_dict[\"SET_DICT_RSF\"][\"V_0\"] = set_dict[\"V_PL\"] # Initial velocity [m/s]\n",
     "set_dict[\"SET_DICT_RSF\"][\"TH_0\"] = set_dict[\"SET_DICT_RSF\"][\"DC\"] / set_dict[\"V_PL\"]    # Initial state [s]\n",
     "\n",
     "# Compute relevant length scales:\n",
@@ -158,7 +157,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,7 +202,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,7 +230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,9 +289,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
