Checked (and updated) example notebooks

--- a/examples/notebooks/compute_events.ipynb
+++ b/examples/notebooks/compute_events.ipynb
@@ -11,6 +11,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "7f4eb619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import sys\n",
+    "import pickle\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Import QDYN wrapper\n",
+    "from qdyn import qdyn\n",
+    "from qdyn.utils import post_processing"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "04bd8676-64c7-401b-a03e-ae53dcfbb772",
    "metadata": {},
@@ -25,19 +46,7 @@
     }
    ],
    "source": [
-    "# reload modules automatically\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\n",
-    "\"\"\"\n",
-    "INITIAL PARAMETERS\n",
-    "\"\"\"\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import sys\n",
-    "import pickle\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Add QDYN source directory to PATH\n",
     "# Go up in the directory tree\n",
@@ -683,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
